# bsc-crypto-social-network-ref

./: .gitignore  LICENSE.txt  README.md
soclocker-client/: README.md  package-lock.json  package.json  vue.config.js
soclocker-client/public/: index.html
soclocker-client/src/: App.vue  auther.ts  main.ts  model.ts  router.ts  store.ts
soclocker-client/src/components/: CreatePost.vue  Login.vue  Logout.vue  PostBox.vue  Register.vue  TopBar.vue
soclocker-client/src/views/: Feed.vue  PublicFeed.vue  PublicView.vue
soclocker-server/: Cargo.toml  README.md  Rocket.toml  rustfmt.toml
soclocker-server/datastores/: devel.sqlite  schema.sql
soclocker-server/src/: auth.txt  database.rs  main.rs  models.rs  schema.rs  server_keys.example
soclocker-server/src/routes/: auth.rs  mod.rs  noa.rs  post.rs  server_public_key.rs  user.rs
